focused the module checks slightly, whitespace fixes & updated cybershade theme a bit

--- a/themes/cybershade/theme.less
+++ b/themes/cybershade/theme.less
@@ -7,7 +7,7 @@ body{
     margin: 0;
     font-family: "Muli","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #2d2d2d;
-    background-color: #c2c2c2;
+    background-color: #DDDDDD;
     background-image: url('assets/images/pattern.png');
     background-repeat: repeat;
 
@@ -169,7 +169,6 @@ body{
 
     > section{
         min-height: 700px;
-        background: rgba(176, 176, 176, 0.5);
 
         > div{
             header{
@@ -304,6 +303,10 @@ body{
 
 .pagination{
     margin: 0;
+}
+
+.breadcrumb{
+    margin: 10px 0 20px;
 }
 
 .navGradient(){
